<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".Views.Activities.Register">

    <EditText
        android:id="@+id/register_email_input"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_width="300dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:background="@drawable/rounded_textbox"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"/>

    <EditText
        android:id="@+id/register_password_input"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_width="300dp"
        android:hint="@string/password_hint"
        android:background="@drawable/rounded_textbox"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/register_email_input"
        app:layout_constraintBottom_toTopOf="@id/register_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/register_button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:backgroundTint="@color/dark_blue"
        android:textColor="@color/button_text"
        android:padding="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@id/register_password_input"
        app:layout_constraintBottom_toTopOf="@id/already_have_account_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_account_link"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
