<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background4light"
    tools:context=".Views.Fragments.Characters">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:id="@+id/main_linear_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/characters_form_linear_layout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <EditText
                        android:id="@+id/new_story_location"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:hint="@string/story_location_placeholder"
                        android:padding="16dp"
                        android:background="@drawable/rounded_textbox"
                        android:layout_marginBottom="10dp"
                        android:inputType="text" />

                    <ImageView
                        android:id="@+id/location_pin_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="60dp"
                        android:layout_alignTop="@id/new_story_location"
                        android:layout_alignBottom="@id/new_story_location"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_location"
                        android:padding="10dp"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:focusable="true" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/new_story_plot"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:padding="16dp"
                    android:background="@drawable/rounded_textbox"
                    android:layout_marginBottom="10dp"
                    android:gravity="start|top"
                    android:hint="@string/story_plot_placeholder"
                    android:inputType="textMultiLine" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:background="@drawable/rounded_textbox"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/characters_spinner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"/>

                    <Button
                        android:id="@+id/add_character_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/dark_blue"
                        android:textColor="@color/button_text"
                        android:text="@string/add_character_button_text"
                        android:layout_marginLeft="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/added_characters_container"/>

                <Button
                    android:id="@+id/create_story_button"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="50dp"
                    android:backgroundTint="@color/dark_blue"
                    android:textColor="@color/button_text"
                    android:text="@string/create_new_story_button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
