<?xml version="1.0" encoding="utf-8"?>
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background4light"
        tools:context=".Views.Fragments.Home">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:id="@+id/main_linear_layout">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />
                <TextView
                    android:id="@+id/created_stories_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_greeing"
                    android:textSize="30sp"
                    android:textColor="@color/sea_blue"
                    android:layout_marginTop="8dp"/>


                <TextView
                    android:id="@+id/created_stories_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/home_explanation"
                    android:textSize="16sp"
                    android:textColor="@color/gray_blue"
                    android:layout_marginTop="8dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <EditText
                    android:id="@+id/search_stories_field"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:ems="10"
                    android:padding="16dp"
                    android:background="@drawable/rounded_textbox"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/search_placeholder"
                    android:inputType="text" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/storiesListLinearLayout">

                    <ProgressBar
                        android:id="@+id/loading_progressbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:visibility="gone" />

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
